<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyMassActivity"
    android:orientation="vertical"
    android:background="@drawable/chopping_board">

    <TextView
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="EatGood"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="Weight(in kilograms)"
        android:textSize="30dp"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/bmi_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="6"
        android:hint="e.g. 75"
        android:text="@string/bmi_weight"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:shadowColor="@android:color/background_dark"
        android:text="Height(in centimetres)"
        android:textSize="30dp"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/bmi_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="6"
        android:hint="e.g. 180"
        android:text="@string/bmi_height"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bmi_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="calculateBMi"
        android:text="@string/bmi_calculate"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:background="@android:color/holo_green_light"/>

    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Result"
        android:textSize="30dp"
        android:fontFamily="casual"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/bmi_note"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="*Please keep in mind that BMI may overestimate body fat in athletes and others who have a muscular build and may underestimate body fat in older persons and others who have lost muscle.. "
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp" />







</LinearLayout>